# JARL

./: .gitignore  DESIGN.md  README.md  TODO  carl_ppo.py  design.md  ppo.py  pyproject.toml  test.ipynb  test.py  update.drawio  watch_checkpoints.py
data/: lander.pkl
examples/: gaifo.py  lunar_lander.py  ppo.py
jarl/: __init__.py
jarl/collect/: __init__.py  behavior.py  capture.py  evaluate.py  runner.py  self_play.py
jarl/data/: __init__.py  batch.py  buffer.py  core.py  dataset.py  dict.py  multi.py  records.py  spec.py  types.py  utils.py
jarl/envs/: __init__.py  env.py  gym.py  reset.py  space.py  vec.py  wrap.py  wrappers.py
jarl/learn/: __init__.py  algorithm.py  gaifo.py  optim.py  ppo.py  program.py  spo.py  update.py
jarl/log/: box.py  log.py  logger.py  progress.py  utils.py
jarl/modules/: __init__.py  actor_critic.py  base.py  composite.py  core.py  discrim.py  discriminator.py  encoder.py  mlp.py  network.py  operator.py  policy.py  recurrent.py  types.py  utils.py
jarl/modules/encoder/: __init__.py  base.py  core.py  image.py
jarl/runtime/: __init__.py  clock.py  evaluate.py  schedule.py  trainer.py  value_schedule.py
jarl/sample/: __init__.py  rollout.py
jarl/store/: __init__.py  base.py  replay.py  rollout.py
jarl/train/: evaluate.py  graph.py  loop.py  optim.py  optimizer.py  utils.py
jarl/train/graph/: graph.py  utils.py
jarl/transform/: __init__.py  base.py  returns.py  reward.py  value.py
tests/: test_carl_recurrent.py  test_collect.py  test_recurrent_modules.py  test_reporting.py  test_runtime.py  test_spo.py
(+17 files in other folders)
