[project]
name = "jarl"
version = "0.1.0"
description = "Modular reinforcement learning components for rapid experimentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=1.24",
    "rich>=14.0",
    "torch>=2.7",
    "trueskill>=0.4.5",
]

[project.optional-dependencies]
examples = ["gymnasium[box2d]>=1.0"]
logging = ["tensorboard>=2.0"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
